# wgpu-renderer

./: .gitignore  Cargo.toml  README.md
examples/: triangle.rs
examples/gltf/: gltf.wgsl  main.rs
examples/texture/: README.md  main.rs  texture.wgsl
examples/triangles/: README.md  main.rs  triangles.wgsl
examples/uniform/: README.md  main.rs  uniform.wgsl
shaders/: shader.wgsl  triangles.wgsl
src/: camera.rs  engine.rs  lib.rs  main.rs  object.rs  pipeline.rs  renderer.rs  scene.rs  texture.rs
