[package]
name = "wgpu-renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.29.1", features = ["rwh_05"] }
wgpu = "0.19.1"
env_logger = "0.10.1"
log = "0.4.20"
pollster = "0.3.0"
bytemuck = { version = "1.14.3", features = ["derive"] }
image = {version = "0.24.8", features = ["png", "jpeg"], default-features = false}
anyhow = "1.0"
cgmath = "0.18.0"